--- a/webroot/assets/main.css
+++ b/webroot/assets/main.css
@@ -1,45 +1,3 @@
-/*#filters {
-    width: 250px;
-    padding: 10px;
-    border: 1px solid black;
-}
-
-#camera-select {
-    width: 100%;
-}
-
-#date-select {
-    margin-top: 5px;
-}
-
-#recordings {
-    border: 1px solid black;
-    height: 400px;
-    width: 250px;
-    overflow-y: scroll;
-    padding: 10px;
-}
-
-.recording {
-    margin-bottom: 10px;
-}
-
-.recording-duration {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
-.recording-view-icon {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
-}
-
-#video-container {
-    float: left;
-    display: inline-block;
-}*/
-
 body {
     padding: 25px;
 }
@@ -90,4 +48,12 @@ video {
     border-radius: 4px;
     box-shadow: none;
     box-sizing: border-box;
+}
+
+#video-info {
+    display: flex;
+}
+
+#video-speed {
+    margin-left: auto;
 }
